--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "typings": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node ./bin/build && babel src --out-dir dist --ignore 'src/feather' --copy-files"
+    "build": "git submodule update --recursive --remote && node ./bin/build && babel src --out-dir dist --ignore 'src/feather' --copy-files"
   },
   "repository": {
     "type": "git",
@@ -28,17 +28,17 @@
   "homepage": "https://github.com/carmelopullara/react-feather#readme",
   "devDependencies": {
     "babel-cli": "^6.24.1",
-    "babel-eslint": "^7.2.3",
+    "babel-eslint": "^9.0.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "camelcase": "^4.1.0",
+    "camelcase": "^5.0.0",
     "cheerio": "^1.0.0-rc.1",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^15.0.1",
+    "eslint": "^5.5.0",
+    "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.3.0",
-    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.0.1",
     "glob": "^7.1.2",
     "prettier": "^1.13.7",
